<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SMSBankingActivity!</string>
    <string name="app_name">Schetoved</string>
    <string name="sms_process">SMS Processing</string>
    <string name="application_only">SMS process only within application</string>
    <string name="normal_processing">Normal SMS processing</string>
    <string name="card_filter">Card numbers</string>
    <string name="operation_filter">Operations</string>
    <string name="date_period">Period</string>
    <string name="last_month">Last month</string>
    <string name="last_three_months">Last 3 months</string>        
    <string name="last_six_months">Last 6 months</string>
    <string name="last_nine_months">Last 9 months</string>
    <string name="last_year">Last year</string>
    <string name="all">All</string>    
    <string name="card_operations">Card operations</string>    
    <string name="incoming_operations">Credit fund operations</string>    
    <string name="outgoing_operations">Debit fund operations</string>
    <string name="string_transaction">sum of transaction</string> 
    <string name="string_incoming_operation">credit amount</string>
    <string name="string_outgoing_operation">debit amount</string> 
    <string name="operation_card_number">Card:</string>
    <string name="operation_date">Date:</string>
    <string name="operation_amount">Amount:</string>
    <string name="operation_place">Place:</string>
    <string name="operation_name">Operation:</string>
    <string name="operation_card_name">card operation</string>
    <string name="operation_incoming_name">credit</string>
    <string name="operation_outgoing_name">debit</string>
    <string name="operation_balance">Balance:</string> 
    <string name="close">Close</string>   
    <string name="apply">Apply</string> 
    <string name="notification_string">New SMS from Bank. Balance:</string>  
    <string name="detail_info">Transaction detail</string> 
	<string name="filters_screen_name">Set filters</string>    
	<string name="no_data">No data</string> 	
	<string name="no_data_info">No one SMS from bank</string>      
	<string name="save">Save</string>        
	<string name="card_description">Card description</string>  
	<string name="input_password">Input password</string>  
	<string name="wrong_password">Wrong password</string>  
	<string name="security">Security</string>  
	<string name="use_password">Password access</string>
	<string name="yes">Yes</string>  
	<string name="no">No</string>    
	<string name="set_password">Set password</string>
	<string name="repeat_password">Repeat password</string>
	<string name="settings">Settings</string>
	<string name="checking">Check</string> 
	<string name="loading">Loading data...</string> 
	<string name="choose_sms">Choose SMS for pattern creating</string> 
	<string name="delete_data">Delete all data</string>
	<string name="load_from_sms">Load new data from SMS after deleting?</string>  
	<string name="first_data_load">It\'s the first time loading.</string>
	<string name="load_from_sms_request">Do you want load data from Inbox?</string>
	<string name="loading_sms">Loading data from SMS...</string> 
	<string name="data_not_loaded">Data from SMS wasn\'t loaded.</string>
	<string name="deleting">Deleting...</string>  
	<string name="error_happened">Error happened</string>
	<string name="delete_card">Delete card data</string> 
	<string name="delete_card_request">Delete all data for card</string> 
	<string name="sqlite_ecxeption">SQLite Database Exception. Application will be closed. Remove application\'s data.</string>
	<string name="cancel">Cancel</string>
	<string name="create_pattern">Create pattern for SMS</string>
	<string name="previous_step">Previous</string>
	<string name="next_step">Next</string>
	<string name="select_card_number">Select card number</string>
	<string name="select_date">Select date</string>
	<string name="select_amount">Select amount</string>
	<string name="select_amount_currency">Select amount currency</string>
	<string name="select_fund_balace">Select fund balance</string>
	<string name="select_fund_currency">Select fund currency</string>
	<string name="select_place">Select place of operation</string>
	<string name="select_bank">Select bank name</string>
	<string name="show_result_regexp">Show result pattern (regexp)</string>
	<string name="mark_selected">Mark selected</string>
	<string name="new_operation">New operation</string>
	
	<string name="ok_string">OK</string>
	<string name="using_password">using_password</string>
	<string name="sms_processing">sms_processing</string>
	<string name="change_password">change_password</string>
</resources>
