<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  <PreferenceCategory 
  	android:title="@string/sms_process">
  	
  	<ListPreference
  		android:title="@string/sms_process"
  		android:key="@string/sms_processing"
  		android:entries="@array/array_for_sms_processing"
  		android:entryValues="@array/array_for_sms_processing"
  		android:defaultValue="@string/application_only">
  	</ListPreference>
  	
  </PreferenceCategory>
  
  <PreferenceCategory 
  	android:title="@string/security">
  	
  	<CheckBoxPreference
  		android:title="@string/use_password"
  		android:key="@string/using_password"
   		android:defaultValue="false">
  	</CheckBoxPreference>
  	
  	<Preference
  		android:title="@string/set_password"
  		android:key="@string/change_password"
  		android:dependency="@string/using_password">
  	</Preference>  		
  	
  </PreferenceCategory>
    
</PreferenceScreen>
