<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
<TextView
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/card_filter" >
</TextView>

<Spinner
  android:id="@+id/card_number"
  android:layout_height="wrap_content"
  android:layout_width="fill_parent">
</Spinner>

<TextView
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/operation_filter" >
</TextView>

<Spinner
  android:id="@+id/operation"
  android:layout_height="wrap_content"
  android:layout_width="fill_parent">
</Spinner>

<TextView
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/date_period" >
</TextView>

<Spinner
  android:id="@+id/date_filter"
  android:layout_height="wrap_content"
  android:layout_width="fill_parent">
</Spinner>
    
<Button
  android:id="@+id/set_filter"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/apply">
</Button>
</LinearLayout>
